<resources>
    <string name="app_name">MyWorkshops</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="or_continue_without_login">or continue without login.</string>
    <string name="register_here">Register here.</string>
    <string name="https_github_com_atharva2001b"><a href="https://github.com/atharva2001b">https://github.com/atharva2001b</a></string>
    <string name="atharva2001b_gmail_com"><a href="atharva2001b@gmail.com">atharva2001b@gmail.com</a></string>
    <string name="github">Github:</string>
    <string name="email">Email:</string>
    <string name="contact_me">Contact me</string>
    <string name="phunsukh_wangdu">Phunsukh Wangdu</string>
    <string name="this_workshop_concenterates_on_various_robotic_applications_of_engineering_concepts">This workshop concenterates on various robotic applications of Engineering concepts..</string>
    <string name="ros_workshop">ROS Workshop</string>
    <string name="_4500rs">4500Rs/-</string>
    <string name="apply">Apply</string>
</resources>