<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.Contacts"
        android:background="@color/color_background">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/my_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/contacts_image"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_image"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/contact_me"
            android:textColor="@color/color_primary_dark"
            android:textSize="35sp" />
    <TextView
        android:layout_below="@+id/text"
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"/>

    <TextView
        android:layout_toEndOf="@+id/txt_email"
        android:layout_below="@+id/text"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atharva2001b_gmail_com"
        android:textSize="20sp"
        android:textIsSelectable="true"
        android:autoLink="email"/>

    <TextView
        android:layout_below="@+id/txt_email"
        android:id="@+id/txt_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"/>

    <TextView
        android:layout_toEndOf="@+id/txt_github"
        android:layout_below="@+id/txt_email"
        android:layout_marginStart="5dp"
        android:layout_marginTop="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/https_github_com_atharva2001b"
        android:textSize="18sp"
        android:textIsSelectable="true"
        android:autoLink="web"/>



</RelativeLayout>